Deleted endpoint for fetching the highest bid for user and handled that logic in single product endpoint